--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="over" [autoFocus]="false">
+  <mat-drawer #drawer class="example-sidenav" mode="over" [autoFocus]="true">
     <app-sidebar (closingSidebar)="drawer.toggle()" (changeChannelsRoutes)="changeChannelsRoutes($event)" (lineSelected)="_onLineSelected($event)" />
   </mat-drawer>
 
