--- a/src/app/home/sidebar/nearby-lines/nearby-lines.component.html
+++ b/src/app/home/sidebar/nearby-lines/nearby-lines.component.html
@@ -1,4 +1,4 @@
-<div class="h-screen overflow-y-auto">
+<div class="h-100 overflow-y-auto">
   <p class="text-center pt-4 pb-2 font-medium flex justify-center">Micros cerca <span class="material-symbols-outlined">explore_nearby</span>
   </p>
   <div class="text-center">
