--- a/src/app/home/sidebar/lines/lines.component.html
+++ b/src/app/home/sidebar/lines/lines.component.html
@@ -1,4 +1,4 @@
-<div class="h-screen overflow-y-auto">
+<div class="h-100 overflow-y-auto">
   <p class="text-center pt-4 pb-2 font-medium flex justify-center">Micros <span class="material-symbols-outlined">directions_bus</span>
   </p>
   @if (linesNames.length > 0) {
@@ -13,7 +13,7 @@
         />
       </mat-form-field>
     </div>
-    <div class="grid grid-cols-2 gap-2">
+    <div class="grid grid-cols-2 gap-2 mb-4">
       @for (lineName of result; track lineName.id) {
         <mat-card>
           <div class="mt-3">
