--- a/src/app/home/sidebar/channels/channels.component.html
+++ b/src/app/home/sidebar/channels/channels.component.html
@@ -1,7 +1,7 @@
 <div class="h-100 overflow-y-auto">
   <p class="text-center pt-4 pb-2 font-medium flex justify-center">Canales de Transporte <span
     class="material-symbols-outlined">road</span></p>
-  <div class="space-y-5">
+  <div class="space-y-5 pl-4 pr-2">
     <p>
       <mat-slide-toggle [checked]="channelOptions.hide==selectedOption"
                         (change)="selectOption($event, channelOptions.hide)">
