--- a/src/app/home/sidebar/lines/lines.component.html
+++ b/src/app/home/sidebar/lines/lines.component.html
@@ -9,6 +9,7 @@
         placeholder="Buscar línea"
         autocomplete="off"
         (input)="onSearchText(searchText)"
+        class="{{isSmallScreen ? 'input-sm' :  'input-lg'}}"
       />
     </mat-form-field>
   </div>
