--- a/src/app/home/sidebar/lines/lines.component.html
+++ b/src/app/home/sidebar/lines/lines.component.html
@@ -1,5 +1,8 @@
-<p class="text-center pt-4 pb-2 font-medium flex justify-center">Micros <span class="material-symbols-outlined">directions_bus</span>
-</p>
+<div class="mt-2">
+  <p class="text-center font-medium flex justify-center">Micros <span
+    class="material-symbols-outlined">directions_bus</span>
+  </p>
+</div>
 @if (linesNames.length > 0) {
   <div class="text-center grid ml-4 mr-2">
     <mat-form-field appearance="outline">
