--- a/src/app/home/map/map.component.html
+++ b/src/app/home/map/map.component.html
@@ -1,7 +1,7 @@
 <div
   leaflet
   [leafletOptions]="options"
-  [leafletLayersControl]="layersControl"
+  [leafletBaseLayers]="baseLayers"
   [style]="styleMap()"
   (leafletMapReady)="onMapReady($event)"
 >
